# shared-workflow-test

./: .bazelignore  .bazelrc  .envrc  .gitignore  .golangci.yml  .prettierignore  .yamllint.yaml  BUILD.bazel  CLAUDE.md  MODULE.bazel  README.md  TODO.md  eslint.config.mjs  go.mod  go.sum  package-lock.json  package.json
.github/: shadow-consumers.json
.github/workflows/: ci.yaml  dispatch-auth-test.yaml  local-ci-smoke.yaml  selfhosted-smoke.yaml  shadow-cleanup.yaml  shadow.yaml  shared.yaml  shared.yml  test-no-token.yml  test.yaml
actions/debug/: BUILD.bazel  action.yaml  action.yml  main.go
actions/debug/scripts/: debug.cli.mjs  debug.mjs  debug.test.mjs
actions/lint/: BUILD.bazel  action.yaml  main.go
actions/lint/scripts/: lint.cli.mjs  lint.mjs  lint.test.mjs  run.sh
actions/setup/: BUILD.bazel  action.yaml  main.go
actions/setup/scripts/: run.sh  setup.cli.mjs  setup.mjs  setup.test.mjs
actions/test/: BUILD.bazel  action.yaml  main.go
actions/test/scripts/: run.sh  test.cli.mjs  test.mjs  test.test.mjs
internal/actions/debug/: BUILD.bazel  debug.go  debug_test.go
internal/actions/lint/: BUILD.bazel  lint.go  lint_test.go
internal/actions/setup/: BUILD.bazel  setup.go  setup_test.go
internal/actions/test/: BUILD.bazel  test.go  test_test.go
internal/ghactions/: BUILD.bazel  args.go  args_test.go  format.go  format_test.go  output.go  output_test.go
internal/guard/: BUILD.bazel  guard.go  guard_test.go
internal/noinlinescripts/: BUILD.bazel  format.go  format_test.go  noinlinescripts.go  noinlinescripts_test.go
internal/shadow/adapters/: BUILD.bazel  exec.go  exec_test.go  git.go  git_test.go  github.go  github_test.go  workflows.go  workflows_test.go
internal/shadow/core/: BUILD.bazel  branchname.go  branchname_test.go  consumers.go  consumers_test.go  dispatch.go  dispatch_test.go  dispatchauth.go  dispatchauth_test.go  mirrortree.go  mirrortree_test.go  patchworkflow.go  patchworkflow_test.go  pulltrigger.go  pulltrigger_test.go  requireenv.go  requireenv_test.go  resolvecontext.go  resolvecontext_test.go  summary.go  summary_test.go  transform.go  transform_test.go  yamlnode.go
scripts/: hello.sh  lint.mjs
scripts/lib/args/: args.mjs  args.test.mjs
scripts/lib/guard/: check-no-inline-scripts.cli.mjs  check-no-inline-scripts.mjs  check-no-inline-scripts.test.mjs
scripts/lib/log/: format.mjs  format.test.mjs
scripts/shadow/: actionlint.sh  cleanup.sh  dispatch.sh  list-consumers.sh  resolve-ctx.sh
shadow/: .gitignore  README.md  SECURITY.md  ci.sh  eslint.config.js  install.mjs  package-lock.json  package.json  run-mirror.sh  tsconfig.json  typecheck.mjs
shadow/cmd/check-dispatch-auth/: BUILD.bazel  main.go
shadow/cmd/cleanup/: BUILD.bazel  main.go
shadow/cmd/dispatch-and-watch/: BUILD.bazel  main.go
shadow/cmd/list-consumers/: BUILD.bazel  main.go
shadow/cmd/mirror-and-test/: BUILD.bazel  main.go
shadow/cmd/resolve-ctx/: BUILD.bazel  main.go
shadow/src/adapters/: exec.mts  git.mts  git.ts  github.mts  github.ts  workflows.mts  workflows.ts
shadow/src/core/: args.mts  args.ts  deps.mts  dispatch.mts  dispatch.ts  ensurePullRequestTrigger.mts  mirrorTree.mts  parseConsumers.mts  parseConsumers.ts  patchConsumerWorkflow.mts  patchConsumerWorkflow.ts  requireEnv.mts  resolveContext.mts  resolveContext.ts  shadowBranchName.mts  summary.mts  summary.ts  transformWorkflowFile.mts  transformWorkflowFile.ts
shadow/test/: args.test.mts  args.test.ts  deps.test.mts  dispatch.test.mts  dispatch.test.ts  ensurePullRequestTrigger.test.mts  ensurePullRequestTrigger.test.ts  exec.test.mts  exec.test.ts  git.test.mts  git.test.ts  mirrorTree.test.mts  mirrorTree.test.ts  parseConsumers.test.mts  parseConsumers.test.ts  patchConsumerWorkflow.test.mts  patchConsumerWorkflow.test.ts  patchWorkflowsInDir.test.mts  patchWorkflowsInDir.test.ts  referencesWorkflowsRepo.test.mts  referencesWorkflowsRepo.test.ts  requireEnv.test.mts  requireEnv.test.ts  resolveContext.test.mts  resolveContext.test.ts  shadowBranchName.test.mts  shadowBranchName.test.ts  shadowList.test.mts  summary.test.mts  summary.test.ts  transformWorkflowFile.test.mts  transformWorkflowFile.test.ts
tools/: BUILD.bazel  multitool.lock.json  requirements_lock.txt  smoke.sh
tools/covergate/: BUILD.bazel  main.go
tools/guard/: BUILD.bazel  main.go
tools/no-inline-scripts/: BUILD.bazel  main.go
tools/wsrun/: BUILD.bazel  main.go
