module(
    name = "reusable_workflows",
    version = "0.0.0",
)

bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.51.0")
bazel_dep(name = "hermetic_cc_toolchain", version = "4.1.0")

# Downloaded Go SDK — no host Go required for the build.
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.0")

# Hermetic zig-based C toolchain for reproducible, fully-static Linux cross-builds. With pure Go
# (CGO_ENABLED=0, see .bazelrc) it's a safety net — never on the critical path — but it guarantees
# any future cgo links hermetically rather than against the host libc.
toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(toolchains, "zig_sdk")
register_toolchains(
    "@zig_sdk//toolchain:linux_amd64_gnu.2.31",
    "@zig_sdk//toolchain:linux_arm64_gnu.2.31",
)

# Third-party Go deps resolved from go.mod (run `bazel mod tidy` to refresh use_repo).
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_spf13_cobra",
    "com_github_stretchr_testify",
)
