module(
    name = "reusable_workflows",
    version = "0.0.0",
)

bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.51.0")
bazel_dep(name = "hermetic_cc_toolchain", version = "4.1.0")

# Dev workbench: hermetic CLI tools (no host installs) + a PATH-mountable tool dir.
bazel_dep(name = "rules_python", version = "2.0.2")
bazel_dep(name = "rules_multitool", version = "1.11.1")
bazel_dep(name = "rules_multirun", version = "0.13.0")
bazel_dep(name = "bazel_env.bzl", version = "0.7.2")

# yamllint (Python) from a universal, hash-pinned lock (regenerate with `uv pip compile`, see
# tools/BUILD.bazel). rules_python downloads its own interpreter — no host Python needed.
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.12",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.12",
    requirements_lock = "//tools:requirements_lock.txt",
)
use_repo(pip, "pip")

# golangci-lint (prebuilt release binary) pinned per-platform in tools/multitool.lock.json.
multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(lockfile = "//tools:multitool.lock.json")
use_repo(multitool, "multitool")

# Downloaded Go SDK — no host Go required for the build.
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.0")

# Hermetic zig-based C toolchain for reproducible, fully-static Linux cross-builds. With pure Go
# (CGO_ENABLED=0, see .bazelrc) it's a safety net — never on the critical path — but it guarantees
# any future cgo links hermetically rather than against the host libc.
toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(toolchains, "zig_sdk")

register_toolchains(
    "@zig_sdk//toolchain:linux_amd64_gnu.2.31",
    "@zig_sdk//toolchain:linux_arm64_gnu.2.31",
)

# Third-party Go deps resolved from go.mod (run `bazel mod tidy` to refresh use_repo).
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_google_go_github_v66",
    "com_github_spf13_cobra",
    "com_github_stretchr_testify",
    "in_gopkg_yaml_v3",
)
