load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "debug_lib",
    srcs = ["main.go"],
    importpath = "github.com/stefanpenner-cs/reusable-workflows/actions/debug",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/actions/debug",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_binary(
    name = "debug",
    embed = [":debug_lib"],
    visibility = ["//visibility:public"],
)
