load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "lint_lib",
    srcs = ["main.go"],
    importpath = "github.com/stefanpenner-cs/reusable-workflows/actions/lint",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/actions/lint",
        "//internal/ghactions",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_binary(
    name = "lint",
    embed = [":lint_lib"],
    visibility = ["//visibility:public"],
)
