load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "setup_lib",
    srcs = ["main.go"],
    importpath = "github.com/stefanpenner-cs/reusable-workflows/actions/setup",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/actions/setup",
        "//internal/ghactions",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_binary(
    name = "setup",
    embed = [":setup_lib"],
    visibility = ["//visibility:public"],
)
