load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "test_lib",
    srcs = ["main.go"],
    importpath = "github.com/stefanpenner-cs/reusable-workflows/actions/test",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/actions/test",
        "//internal/ghactions",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_binary(
    name = "test",
    embed = [":test_lib"],
    visibility = ["//visibility:public"],
)
