load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "guard",
    srcs = ["guard.go"],
    importpath = "github.com/stefanpenner-cs/reusable-workflows/internal/guard",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "guard_test",
    srcs = ["guard_test.go"],
    embed = [":guard"],
    deps = ["@com_github_stretchr_testify//assert"],
)
