load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "noinlinescripts",
    srcs = [
        "format.go",
        "noinlinescripts.go",
    ],
    importpath = "github.com/stefanpenner-cs/reusable-workflows/internal/noinlinescripts",
    visibility = ["//:__subpackages__"],
    deps = ["@in_gopkg_yaml_v3//:yaml_v3"],
)

go_test(
    name = "noinlinescripts_test",
    srcs = [
        "format_test.go",
        "noinlinescripts_test.go",
    ],
    embed = [":noinlinescripts"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@in_gopkg_yaml_v3//:yaml_v3",
    ],
)
