load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "covergate_lib",
    srcs = ["main.go"],
    importpath = "github.com/stefanpenner-cs/reusable-workflows/tools/covergate",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "covergate",
    embed = [":covergate_lib"],
    visibility = ["//visibility:public"],
)
