load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "guard_lib",
    srcs = ["main.go"],
    importpath = "github.com/stefanpenner-cs/reusable-workflows/tools/guard",
    visibility = ["//visibility:private"],
    deps = ["//internal/guard"],
)

go_binary(
    name = "guard",
    embed = [":guard_lib"],
    visibility = ["//visibility:public"],
)
