load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "no-inline-scripts_lib",
    srcs = ["main.go"],
    importpath = "github.com/stefanpenner-cs/reusable-workflows/tools/no-inline-scripts",
    visibility = ["//visibility:private"],
    deps = ["//internal/noinlinescripts"],
)

go_binary(
    name = "no-inline-scripts",
    embed = [":no-inline-scripts_lib"],
    visibility = ["//visibility:public"],
)
