load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "wsrun_lib",
    srcs = ["main.go"],
    importpath = "github.com/stefanpenner-cs/reusable-workflows/tools/wsrun",
    visibility = ["//visibility:private"],
    deps = ["@rules_go//go/runfiles"],
)

go_binary(
    name = "wsrun",
    embed = [":wsrun_lib"],
    visibility = ["//visibility:public"],
)
