load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "debug",
    srcs = ["debug.go"],
    importpath = "github.com/stefanpenner-cs/reusable-workflows/internal/actions/debug",
    visibility = ["//:__subpackages__"],
    deps = ["//internal/ghactions"],
)

go_test(
    name = "debug_test",
    srcs = ["debug_test.go"],
    embed = [":debug"],
    deps = [
        "//internal/ghactions",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
