load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "test",
    srcs = ["test.go"],
    importpath = "github.com/stefanpenner-cs/reusable-workflows/internal/actions/test",
    visibility = ["//:__subpackages__"],
    deps = ["//internal/ghactions"],
)

go_test(
    name = "test_test",
    srcs = ["test_test.go"],
    embed = [":test"],
    deps = ["@com_github_stretchr_testify//assert"],
)
