load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "dispatch-and-watch_lib",
    srcs = ["main.go"],
    importpath = "github.com/stefanpenner-cs/reusable-workflows/shadow/cmd/dispatch-and-watch",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/ghactions",
        "//internal/shadow/adapters",
        "//internal/shadow/core",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_binary(
    name = "dispatch-and-watch",
    embed = [":dispatch-and-watch_lib"],
    visibility = ["//visibility:public"],
)
