load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "list-consumers_lib",
    srcs = ["main.go"],
    importpath = "github.com/stefanpenner-cs/reusable-workflows/shadow/cmd/list-consumers",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/ghactions",
        "//internal/shadow/core",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_binary(
    name = "list-consumers",
    embed = [":list-consumers_lib"],
    visibility = ["//visibility:public"],
)
