load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "resolve-ctx_lib",
    srcs = ["main.go"],
    importpath = "github.com/stefanpenner-cs/reusable-workflows/shadow/cmd/resolve-ctx",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/ghactions",
        "//internal/shadow/adapters",
        "//internal/shadow/core",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_binary(
    name = "resolve-ctx",
    embed = [":resolve-ctx_lib"],
    visibility = ["//visibility:public"],
)
